reversed to old entitlements file due to inability to use privileged operations (working on helper tool)

--- a/macOS ToolBox/macOS ToolBox.entitlements
+++ b/macOS ToolBox/macOS ToolBox.entitlements
@@ -8,5 +8,7 @@
 	</array>
 	<key>com.apple.security.scripting-targets</key>
 	<true/>
+	<key>com.apple.security.process</key>
+	<true/>
 </dict>
 </plist>
